--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -2,32 +2,21 @@
 ADC.IPParameters=SamplingTime,LowPowerAutoPowerOff
 ADC.LowPowerAutoPowerOff=DISABLE
 ADC.SamplingTime=ADC_SAMPLETIME_79CYCLES_5
-Dma.Request0=SPI1_TX
-Dma.RequestsNb=1
-Dma.SPI1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI1_TX.0.Instance=DMA1_Channel3
-Dma.SPI1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_TX.0.Mode=DMA_NORMAL
-Dma.SPI1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_TX.0.Priority=DMA_PRIORITY_LOW
-Dma.SPI1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32L0
 Mcu.IP0=ADC
-Mcu.IP1=DMA
-Mcu.IP10=TIM21
-Mcu.IP11=TIM22
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=RTC
-Mcu.IP5=SPI1
-Mcu.IP6=SYS
-Mcu.IP7=TIM2
-Mcu.IP8=TIM3
-Mcu.IP9=TIM6
+Mcu.IP1=NVIC
+Mcu.IP10=TIM22
+Mcu.IP11=USB
+Mcu.IP2=RCC
+Mcu.IP3=RTC
+Mcu.IP4=SPI2
+Mcu.IP5=SYS
+Mcu.IP6=TIM2
+Mcu.IP7=TIM3
+Mcu.IP8=TIM6
+Mcu.IP9=TIM21
 Mcu.IPNb=12
 Mcu.Name=STM32L073R(B-Z)Tx
 Mcu.Package=LQFP64
@@ -35,46 +24,48 @@ Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PB1
 Mcu.Pin11=PB2
-Mcu.Pin12=PB13
-Mcu.Pin13=PB14
-Mcu.Pin14=PB15
-Mcu.Pin15=PC7
-Mcu.Pin16=PA10
-Mcu.Pin17=PA13
-Mcu.Pin18=PA14
-Mcu.Pin19=PB3
+Mcu.Pin12=PB10
+Mcu.Pin13=PB11
+Mcu.Pin14=PB12
+Mcu.Pin15=PB13
+Mcu.Pin16=PB14
+Mcu.Pin17=PB15
+Mcu.Pin18=PC6
+Mcu.Pin19=PC7
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB4
-Mcu.Pin21=PB5
-Mcu.Pin22=PB6
-Mcu.Pin23=VP_RTC_VS_RTC_Activate
-Mcu.Pin24=VP_RTC_VS_RTC_Calendar
-Mcu.Pin25=VP_RTC_VS_RTC_Alarm_B_Intern
-Mcu.Pin26=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin27=VP_SYS_VS_Systick
-Mcu.Pin28=VP_TIM2_VS_no_output2
-Mcu.Pin29=VP_TIM2_VS_NoETR
-Mcu.Pin3=PA3
-Mcu.Pin30=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin31=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin32=VP_TIM21_VS_no_output1
-Mcu.Pin33=VP_TIM21_VS_no_output2
-Mcu.Pin34=VP_TIM21_VS_NoETR
-Mcu.Pin35=VP_TIM22_VS_no_output1
-Mcu.Pin36=VP_TIM22_VS_NoETR
-Mcu.Pin4=PA5
-Mcu.Pin5=PA6
-Mcu.Pin6=PA7
-Mcu.Pin7=PC4
-Mcu.Pin8=PC5
-Mcu.Pin9=PB0
-Mcu.PinsNb=37
+Mcu.Pin20=PA11
+Mcu.Pin21=PA12
+Mcu.Pin22=PA13
+Mcu.Pin23=PA14
+Mcu.Pin24=VP_RTC_VS_RTC_Activate
+Mcu.Pin25=VP_RTC_VS_RTC_Calendar
+Mcu.Pin26=VP_RTC_VS_RTC_Alarm_B_Intern
+Mcu.Pin27=VP_RTC_VS_RTC_Alarm_A_Intern
+Mcu.Pin28=VP_SYS_VS_Systick
+Mcu.Pin29=VP_TIM2_VS_no_output2
+Mcu.Pin3=PA0
+Mcu.Pin30=VP_TIM2_VS_NoETR
+Mcu.Pin31=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin32=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM21_VS_no_output1
+Mcu.Pin34=VP_TIM21_VS_no_output2
+Mcu.Pin35=VP_TIM21_VS_NoETR
+Mcu.Pin36=VP_TIM22_VS_no_output1
+Mcu.Pin37=VP_TIM22_VS_NoETR
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA4
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PA7
+Mcu.PinsNb=38
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
 MxCube.Version=5.4.0
 MxDb.Version=DB.5.0.40
-NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.ADC1_COMP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.EXTI0_1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI4_15_IRQn=true\:0\:0\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -82,71 +73,73 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.RTC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.SPI2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.TIM21_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM22_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.TIM6_DAC_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-PA10.Locked=true
-PA10.Signal=GPIO_Output
+PA0.Locked=true
+PA0.Mode=IN0
+PA0.Signal=ADC_IN0
+PA1.Locked=true
+PA1.Signal=GPIO_Output
+PA11.Mode=Device
+PA11.Signal=USB_DM
+PA12.Locked=true
+PA12.Mode=Device
+PA12.Signal=USB_DP
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_SWCLK
-PA3.Locked=true
-PA3.Mode=IN3
-PA3.Signal=ADC_IN3
-PA5.Mode=TX_Only_Simplex_Unidirect_Master
-PA5.Signal=SPI1_SCK
-PA6.Signal=S_TIM3_CH1
-PA7.Mode=TX_Only_Simplex_Unidirect_Master
-PA7.Signal=SPI1_MOSI
-PB0.Locked=true
-PB0.Signal=GPIO_Output
-PB1.GPIOParameters=PinState
+PA2.GPIOParameters=PinState
+PA2.Locked=true
+PA2.PinState=GPIO_PIN_SET
+PA2.Signal=GPIO_Output
+PA4.Locked=true
+PA4.Signal=GPIO_Output
+PA5.Locked=true
+PA5.Signal=GPIO_Output
+PA6.Locked=true
+PA6.Signal=GPIO_Output
+PA7.Locked=true
+PA7.Signal=GPIO_Output
 PB1.Locked=true
-PB1.PinState=GPIO_PIN_RESET
-PB1.Signal=GPIO_Output
-PB13.GPIOParameters=GPIO_PuPd
-PB13.GPIO_PuPd=GPIO_PULLDOWN
+PB1.Signal=GPXTI1
+PB10.Locked=true
+PB10.Signal=GPXTI10
+PB11.Locked=true
+PB11.Signal=GPXTI11
+PB12.GPIOParameters=PinState
+PB12.Locked=true
+PB12.PinState=GPIO_PIN_SET
+PB12.Signal=GPIO_Output
 PB13.Locked=true
-PB13.Signal=GPXTI13
-PB14.GPIOParameters=GPIO_PuPd
-PB14.GPIO_PuPd=GPIO_PULLDOWN
+PB13.Mode=TX_Only_Simplex_Unidirect_Master
+PB13.Signal=SPI2_SCK
 PB14.Locked=true
-PB14.Signal=GPXTI14
-PB15.GPIOParameters=GPIO_PuPd,GPIO_ModeDefaultEXTI
-PB15.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
-PB15.GPIO_PuPd=GPIO_PULLDOWN
+PB14.Signal=GPIO_Output
 PB15.Locked=true
-PB15.Signal=GPXTI15
+PB15.Mode=TX_Only_Simplex_Unidirect_Master
+PB15.Signal=SPI2_MOSI
 PB2.GPIOParameters=GPIO_PuPd
-PB2.GPIO_PuPd=GPIO_PULLDOWN
+PB2.GPIO_PuPd=GPIO_NOPULL
 PB2.Locked=true
 PB2.Signal=GPXTI2
-PB3.Locked=true
-PB3.Signal=GPIO_Output
-PB4.Locked=true
-PB4.Signal=GPIO_Output
-PB5.Locked=true
-PB5.Signal=GPIO_Output
-PB6.Locked=true
-PB6.Signal=GPIO_Output
 PC13.Mode=Calibration_1Hz
 PC13.Signal=RTC_OUT_CALIB
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC4.GPIOParameters=PinState
-PC4.Locked=true
-PC4.PinState=GPIO_PIN_SET
-PC4.Signal=GPIO_Output
-PC5.Locked=true
-PC5.Signal=GPIO_Output
+PC6.Locked=true
+PC6.Signal=S_TIM3_CH1
+PC7.GPIOParameters=PinState
 PC7.Locked=true
+PC7.PinState=GPIO_PIN_SET
 PC7.Signal=GPIO_Output
 PCC.Checker=true
 PCC.Line=STM32L0x3
@@ -183,10 +176,10 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_DMA_Init-DMA-false-HAL-true,8-MX_TIM22_Init-TIM22-false-HAL-true,9-MX_TIM2_Init-TIM2-false-HAL-true,10-MX_TIM6_Init-TIM6-false-HAL-true,11-MX_TIM3_Init-TIM3-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_TIM21_Init-TIM21-false-HAL-true,6-MX_TIM22_Init-TIM22-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_SPI2_Init-SPI2-false-HAL-true,11-MX_USB_PCD_Init-USB-false-HAL-true
 RCC.48CLKFreq_Value=32000000
-RCC.48RNGFreq_Value=32000000
-RCC.48USBFreq_Value=32000000
+RCC.48RNGFreq_Value=48000000
+RCC.48USBFreq_Value=48000000
 RCC.AHBFreq_Value=32000000
 RCC.APB1Freq_Value=32000000
 RCC.APB1TimFreq_Value=32000000
@@ -197,11 +190,12 @@ RCC.FamilyName=M
 RCC.HCLKFreq_Value=32000000
 RCC.HSE_VALUE=8000000
 RCC.HSI16_VALUE=16000000
+RCC.HSI48MClockSelection=RCC_USBCLKSOURCE_HSI48
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
 RCC.I2C1Freq_Value=32000000
 RCC.I2C3Freq_Value=32000000
-RCC.IPParameters=48CLKFreq_Value,48RNGFreq_Value,48USBFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSI_VALUE,LptimClockSelection,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PWRFreq_Value,RTCClockSelection,RTCClockSelectionVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
+RCC.IPParameters=48CLKFreq_Value,48RNGFreq_Value,48USBFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI16_VALUE,HSI48MClockSelection,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LCDFreq_Value,LPTIMFreq_Value,LPUARTFreq_Value,LSI_VALUE,LptimClockSelection,MCOPinFreq_Value,MSI_VALUE,PLLCLKFreq_Value,PLLMUL,PWRFreq_Value,RTCClockSelection,RTCClockSelectionVirtual,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TIMFreq_Value,TimerFreq_Value,USART1Freq_Value,USART2Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,WatchDogFreq_Value
 RCC.LCDFreq_Value=32768
 RCC.LPTIMFreq_Value=32768
 RCC.LPUARTFreq_Value=32000000
@@ -232,22 +226,22 @@ RTC.IPParameters=Format,Alarm-Alarm A,Alarm_B-Alarm B,WeekDay,Month,Year
 RTC.Month=RTC_MONTH_DECEMBER
 RTC.WeekDay=RTC_WEEKDAY_SUNDAY
 RTC.Year=19
-SH.GPXTI13.0=GPIO_EXTI13
-SH.GPXTI13.ConfNb=1
-SH.GPXTI14.0=GPIO_EXTI14
-SH.GPXTI14.ConfNb=1
-SH.GPXTI15.0=GPIO_EXTI15
-SH.GPXTI15.ConfNb=1
+SH.GPXTI1.0=GPIO_EXTI1
+SH.GPXTI1.ConfNb=1
+SH.GPXTI10.0=GPIO_EXTI10
+SH.GPXTI10.ConfNb=1
+SH.GPXTI11.0=GPIO_EXTI11
+SH.GPXTI11.ConfNb=1
 SH.GPXTI2.0=GPIO_EXTI2
 SH.GPXTI2.ConfNb=1
-SH.S_TIM3_CH1.0=TIM3_CH1,Output Compare1 CH1
+SH.S_TIM3_CH1.0=TIM3_CH1,PWM Generation1 CH1
 SH.S_TIM3_CH1.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI1.CalculateBaudRate=16.0 MBits/s
-SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
-SPI1.Mode=SPI_MODE_MASTER
-SPI1.VirtualType=VM_MASTER
+SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
+SPI2.CalculateBaudRate=16.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 TIM2.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
 TIM2.IPParameters=Prescaler,Period,Channel-Output Compare2 No Output,TIM2_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM2
 TIM2.Period=0x3FFF
@@ -267,8 +261,8 @@ TIM22.IPParameters=TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22,Period,Count
 TIM22.Period=1919
 TIM22.Prescaler=0x400
 TIM22.TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22=TIM22_ETR_LSE
-TIM3.Channel-Output\ Compare1\ CH1=TIM_CHANNEL_1
-TIM3.IPParameters=Channel-Output Compare1 CH1,Period
+TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM3.IPParameters=Period,Channel-PWM Generation1 CH1
 TIM3.Period=0xFFFF
 TIM6.IPParameters=Period,Prescaler
 TIM6.Period=65535
