--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -113,10 +113,9 @@ PB10.Locked=true
 PB10.Signal=GPXTI10
 PB11.Locked=true
 PB11.Signal=GPXTI11
-PB12.GPIOParameters=PinState
 PB12.Locked=true
-PB12.PinState=GPIO_PIN_SET
-PB12.Signal=GPIO_Output
+PB12.Mode=NSS_Signal_Hard_Output
+PB12.Signal=SPI2_NSS
 PB13.Locked=true
 PB13.Mode=TX_Only_Simplex_Unidirect_Master
 PB13.Signal=SPI2_SCK
@@ -239,8 +238,9 @@ SH.S_TIM3_CH1.ConfNb=1
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI2.CalculateBaudRate=16.0 MBits/s
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,VirtualNSS
 SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualNSS=VM_NSSHARD
 SPI2.VirtualType=VM_MASTER
 TIM2.Channel-Output\ Compare2\ No\ Output=TIM_CHANNEL_2
 TIM2.IPParameters=Prescaler,Period,Channel-Output Compare2 No Output,TIM2_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM2
@@ -258,7 +258,7 @@ TIM21.TIM21_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM21=TIM21_ETR_LSE
 TIM22.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM22.CounterMode=TIM_COUNTERMODE_UP
 TIM22.IPParameters=TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22,Period,CounterMode,Prescaler,Channel-Output Compare1 No Output
-TIM22.Period=1919
+TIM22.Period=31
 TIM22.Prescaler=0x400
 TIM22.TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22=TIM22_ETR_LSE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
