--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -20,45 +20,43 @@ Mcu.IP9=TIM21
 Mcu.IPNb=12
 Mcu.Name=STM32L073R(B-Z)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC13
-Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PB1
-Mcu.Pin11=PB2
-Mcu.Pin12=PB10
-Mcu.Pin13=PB11
-Mcu.Pin14=PB12
-Mcu.Pin15=PB13
-Mcu.Pin16=PB14
-Mcu.Pin17=PB15
-Mcu.Pin18=PC6
-Mcu.Pin19=PC7
-Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PA11
-Mcu.Pin21=PA12
-Mcu.Pin22=PA13
-Mcu.Pin23=PA14
-Mcu.Pin24=VP_RTC_VS_RTC_Activate
-Mcu.Pin25=VP_RTC_VS_RTC_Calendar
-Mcu.Pin26=VP_RTC_VS_RTC_Alarm_B_Intern
-Mcu.Pin27=VP_RTC_VS_RTC_Alarm_A_Intern
-Mcu.Pin28=VP_SYS_VS_Systick
-Mcu.Pin29=VP_TIM2_VS_no_output2
-Mcu.Pin3=PA0
-Mcu.Pin30=VP_TIM2_VS_NoETR
-Mcu.Pin31=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin32=VP_TIM6_VS_ClockSourceINT
-Mcu.Pin33=VP_TIM21_VS_no_output1
-Mcu.Pin34=VP_TIM21_VS_no_output2
-Mcu.Pin35=VP_TIM21_VS_NoETR
-Mcu.Pin36=VP_TIM22_VS_no_output1
-Mcu.Pin37=VP_TIM22_VS_NoETR
-Mcu.Pin4=PA1
-Mcu.Pin5=PA2
-Mcu.Pin6=PA4
-Mcu.Pin7=PA5
-Mcu.Pin8=PA6
-Mcu.Pin9=PA7
-Mcu.PinsNb=38
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=PB2
+Mcu.Pin11=PB10
+Mcu.Pin12=PB11
+Mcu.Pin13=PB12
+Mcu.Pin14=PB13
+Mcu.Pin15=PB14
+Mcu.Pin16=PB15
+Mcu.Pin17=PC6
+Mcu.Pin18=PC7
+Mcu.Pin19=PA11
+Mcu.Pin2=PA0
+Mcu.Pin20=PA12
+Mcu.Pin21=PA13
+Mcu.Pin22=PA14
+Mcu.Pin23=VP_RTC_VS_RTC_Activate
+Mcu.Pin24=VP_RTC_VS_RTC_Calendar
+Mcu.Pin25=VP_RTC_VS_RTC_Alarm_B_Intern
+Mcu.Pin26=VP_SYS_VS_Systick
+Mcu.Pin27=VP_TIM2_VS_no_output2
+Mcu.Pin28=VP_TIM2_VS_NoETR
+Mcu.Pin29=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin3=PA1
+Mcu.Pin30=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM21_VS_no_output1
+Mcu.Pin32=VP_TIM21_VS_no_output2
+Mcu.Pin33=VP_TIM21_VS_NoETR
+Mcu.Pin34=VP_TIM22_VS_no_output1
+Mcu.Pin35=VP_TIM22_VS_NoETR
+Mcu.Pin4=PA2
+Mcu.Pin5=PA4
+Mcu.Pin6=PA5
+Mcu.Pin7=PA6
+Mcu.Pin8=PA7
+Mcu.Pin9=PB1
+Mcu.PinsNb=36
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
@@ -128,8 +126,6 @@ PB2.GPIOParameters=GPIO_PuPd
 PB2.GPIO_PuPd=GPIO_NOPULL
 PB2.Locked=true
 PB2.Signal=GPXTI2
-PC13.Mode=Calibration_1Hz
-PC13.Signal=RTC_OUT_CALIB
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -218,10 +214,9 @@ RCC.USART2Freq_Value=32000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=64000000
 RCC.WatchDogFreq_Value=37000
-RTC.Alarm-Alarm\ A=RTC_ALARM_A
 RTC.Alarm_B-Alarm\ B=RTC_ALARM_B
 RTC.Format=RTC_FORMAT_BIN
-RTC.IPParameters=Format,Alarm-Alarm A,Alarm_B-Alarm B,WeekDay,Month,Year
+RTC.IPParameters=Format,WeekDay,Month,Year,Alarm_B-Alarm B
 RTC.Month=RTC_MONTH_DECEMBER
 RTC.WeekDay=RTC_WEEKDAY_SUNDAY
 RTC.Year=19
@@ -269,8 +264,6 @@ TIM6.Period=65535
 TIM6.Prescaler=0x40
 VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
 VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
-VP_RTC_VS_RTC_Alarm_A_Intern.Mode=Alarm A
-VP_RTC_VS_RTC_Alarm_A_Intern.Signal=RTC_VS_RTC_Alarm_A_Intern
 VP_RTC_VS_RTC_Alarm_B_Intern.Mode=Alarm B
 VP_RTC_VS_RTC_Alarm_B_Intern.Signal=RTC_VS_RTC_Alarm_B_Intern
 VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
