--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -59,8 +59,8 @@ Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L073RZTx
-MxCube.Version=5.6.0
-MxDb.Version=DB.5.0.60
+MxCube.Version=6.0.1
+MxDb.Version=DB.6.0.0
 NVIC.ADC1_COMP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI0_1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -79,6 +79,8 @@ NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 PA0.Locked=true
 PA0.Mode=IN0
 PA0.Signal=ADC_IN0
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=ADC_DIV_EN
 PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA11.Mode=Device
@@ -86,16 +88,25 @@ PA11.Signal=USB_DM
 PA12.Locked=true
 PA12.Mode=Device
 PA12.Signal=USB_DP
-PA2.GPIOParameters=PinState
+PA2.GPIOParameters=PinState,GPIO_Label
+PA2.GPIO_Label=PS_EN
 PA2.Locked=true
 PA2.PinState=GPIO_PIN_SET
 PA2.Signal=GPIO_Output
+PA4.GPIOParameters=GPIO_Label
+PA4.GPIO_Label=MOTOR_EN
 PA4.Locked=true
 PA4.Signal=GPIO_Output
+PA5.GPIOParameters=GPIO_Label
+PA5.GPIO_Label=LED1
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=LED2
 PA6.Locked=true
 PA6.Signal=GPIO_Output
+PA7.GPIOParameters=GPIO_Label
+PA7.GPIO_Label=LED3
 PA7.Locked=true
 PA7.Signal=GPIO_Output
 PB1.Locked=true
@@ -110,6 +121,9 @@ PB12.Signal=SPI2_NSS
 PB13.Locked=true
 PB13.Mode=TX_Only_Simplex_Unidirect_Master
 PB13.Signal=SPI2_SCK
+PB14.GPIOParameters=GPIO_Speed,GPIO_Label
+PB14.GPIO_Label=LCD_DC
+PB14.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PB14.Locked=true
 PB14.Signal=GPIO_Output
 PB15.Locked=true
@@ -125,7 +139,8 @@ PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC6.Locked=true
 PC6.Signal=S_TIM3_CH1
-PC7.GPIOParameters=PinState
+PC7.GPIOParameters=PinState,GPIO_Label
+PC7.GPIO_Label=LCD_RESET
 PC7.Locked=true
 PC7.PinState=GPIO_PIN_SET
 PC7.Signal=GPIO_Output
@@ -139,7 +154,7 @@ ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32L073RZTx
-ProjectManager.FirmwarePackage=STM32Cube FW_L0 V1.11.2
+ProjectManager.FirmwarePackage=STM32Cube FW_L0 V1.11.3
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
@@ -152,11 +167,12 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=project_L0.ioc
 ProjectManager.ProjectName=project_L0
+ProjectManager.RegisterCallBack=
 ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,1-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_TIM21_Init-TIM21-false-HAL-true,6-MX_TIM22_Init-TIM22-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_SPI2_Init-SPI2-false-HAL-true,11-MX_USB_PCD_Init-USB-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_TIM21_Init-TIM21-false-HAL-true,6-MX_TIM22_Init-TIM22-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_SPI2_Init-SPI2-false-HAL-true,11-MX_USB_PCD_Init-USB-false-HAL-true
 RCC.48CLKFreq_Value=32000000
 RCC.48RNGFreq_Value=48000000
 RCC.48USBFreq_Value=48000000
@@ -238,7 +254,7 @@ TIM21.TIM21_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM21=TIM21_ETR_LSE
 TIM22.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
 TIM22.CounterMode=TIM_COUNTERMODE_UP
 TIM22.IPParameters=TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22,Period,CounterMode,Prescaler,Channel-Output Compare1 No Output
-TIM22.Period=31
+TIM22.Period=1919
 TIM22.Prescaler=0x400
 TIM22.TIM22_ETR_REMAP-ClockSourceETR_Mode2_Remap_TIM22=TIM22_ETR_LSE
 TIM3.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
