--- a/project_L0/project_L0.ioc
+++ b/project_L0/project_L0.ioc
@@ -2,23 +2,35 @@
 ADC.IPParameters=SamplingTime,LowPowerAutoPowerOff
 ADC.LowPowerAutoPowerOff=DISABLE
 ADC.SamplingTime=ADC_SAMPLETIME_79CYCLES_5
+Dma.Request0=SPI2_TX
+Dma.RequestsNb=1
+Dma.SPI2_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SPI2_TX.0.Instance=DMA1_Channel5
+Dma.SPI2_TX.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI2_TX.0.MemInc=DMA_MINC_DISABLE
+Dma.SPI2_TX.0.Mode=DMA_NORMAL
+Dma.SPI2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.SPI2_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SPI2_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.SPI2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32L0
 Mcu.IP0=ADC
-Mcu.IP1=NVIC
-Mcu.IP10=TIM22
-Mcu.IP11=USB
-Mcu.IP2=RCC
-Mcu.IP3=RTC
-Mcu.IP4=SPI2
-Mcu.IP5=SYS
-Mcu.IP6=TIM2
-Mcu.IP7=TIM3
-Mcu.IP8=TIM6
-Mcu.IP9=TIM21
-Mcu.IPNb=12
+Mcu.IP1=DMA
+Mcu.IP10=TIM21
+Mcu.IP11=TIM22
+Mcu.IP12=USB
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=RTC
+Mcu.IP5=SPI2
+Mcu.IP6=SYS
+Mcu.IP7=TIM2
+Mcu.IP8=TIM3
+Mcu.IP9=TIM6
+Mcu.IPNb=13
 Mcu.Name=STM32L073R(B-Z)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
@@ -62,6 +74,7 @@ Mcu.UserName=STM32L073RZTx
 MxCube.Version=6.0.1
 MxDb.Version=DB.6.0.0
 NVIC.ADC1_COMP_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.DMA1_Channel4_5_6_7_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.EXTI0_1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI2_3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.EXTI4_15_IRQn=true\:0\:0\:true\:false\:true\:true\:true
@@ -172,7 +185,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC_Init-ADC-false-HAL-true,4-MX_RTC_Init-RTC-false-HAL-true,5-MX_TIM21_Init-TIM21-false-HAL-true,6-MX_TIM22_Init-TIM22-false-HAL-true,7-MX_TIM2_Init-TIM2-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_SPI2_Init-SPI2-false-HAL-true,11-MX_USB_PCD_Init-USB-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC_Init-ADC-false-HAL-true,5-MX_RTC_Init-RTC-false-HAL-true,6-MX_TIM21_Init-TIM21-false-HAL-true,7-MX_TIM22_Init-TIM22-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM6_Init-TIM6-false-HAL-true,10-MX_TIM3_Init-TIM3-false-HAL-true,11-MX_SPI2_Init-SPI2-false-HAL-true,12-MX_USB_PCD_Init-USB-false-HAL-true
 RCC.48CLKFreq_Value=32000000
 RCC.48RNGFreq_Value=48000000
 RCC.48USBFreq_Value=48000000
